Fixed search width on mobile

--- a/src/theme/common.scss
+++ b/src/theme/common.scss
@@ -30,6 +30,10 @@ html, body {
   cursor: pointer;
 }
 
+.wide {
+  width: 100%;
+}
+
 .context-menu {
   border-radius: 2px;
   padding: 4px;
